--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=footsallife-fc
+spring.application.name=kick-log
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/DB/kick-log
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+ spring.jpa.properties.hibernate.show_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+
+
